Fixed alignment of Post button text

--- a/src/components/styles/InputOption.css
+++ b/src/components/styles/InputOption.css
@@ -15,4 +15,6 @@
 .inputOption > h4 {
     margin-left: 0.313rem;
     font-size: medium;
+    font-weight: bold;
+    margin-bottom: 0;
 }
